# gitreg

./: CLAUDE.md  Cargo.toml  DETAILS.md  Gitreg.code-workspace  INTEGRATORS.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.githooks/: pre-commit  pre-push
.github/workflows/: build-latest.yml  ci.yml  e2e.yml  release.yml
src/: cli.rs  db.rs  error.rs  event.rs  hook.rs  main.rs  shell.rs  upgrade.rs
tests/: integration.sh
