[package]
name = "gitreg"
version = "0.1.17"
edition = "2021"
description = "Zero-latency background Git repository tracker"
license = "MIT"
authors = ["Deepak Jha <hello@dpkay.com>"]
repository = "https://github.com/dpkay-io/gitreg"
readme = "README.md"
keywords = ["git", "repository", "tracker", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap       = { version = "4",    features = ["derive", "suggestions"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
dirs       = "5"
tabled     = "0.15"
dunce      = "1"
chrono     = { version = "0.4" }
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ureq    = { version = "2", default-features = false, features = ["tls"] }
flate2  = { version = "1", default-features = false, features = ["rust_backend"] }
tar     = "0.4"
sha2    = "0.10"

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
